...
                        custom:backgroundTint="@color/toggle_stroke_color" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <com.braintreepayments.api.uicomponents.PayPalButtonView
                android:id="@+id/pp_payment_button"
                custom:buttonColor="blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
...
                        custom:backgroundTint="@color/toggle_stroke_color" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <com.braintreepayments.api.uicomponents.VenmoButton
                android:id="@+id/venmo_payment_button"
                custom:buttonColor="blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
...
