<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Braintree Demo</string>

    <string name="ui_components">UI Components</string>
    <string name="card_fields">Card Fields</string>
    <string name="card_fields_pay">Pay</string>

    <!-- MainActivity -->
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
...
